[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Roberto Arista <arista.rob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
drawBot = { git = "https://github.com/typemytype/drawbot.git" }
mutatorMath = { git = "https://github.com/LettError/MutatorMath.git" }
icecream = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool]
black = { line-length = 120 }
isort = { profile = "black" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
